src/components/projects/projects.scss
@import "../../app.scss";

.portfolio {
  .progress {
    position: sticky;
    top: 100px;
    left: 0;
    text-align: center;
    color: #011f4b;
    font-size: 36px;
    @include mobile {
      background-color: white;
      bottom: 0;
      font-size: 24px;
    }

    .progressBar {
      height: 10px;
      background-color: #FF8E00;
    }
  }

  .container {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    
    .wrapper {
      height: 100%;
      margin: auto;
      display: flex;
      align-items: center;
      justify-content: center;
      gap: 100px;

      @include mobile {
        gap: 0px;
        flex-direction: column;
      }

      .imageContainer {
        flex: 1;
        height: 50%;
        @include mobile {
          width: 100%;
          max-height: 300px;
          border: none;
        }

        img {
          width: 100%;
          height: 100%;
          object-fit: cover;

          @include mobile {
            object-fit: contain;
          }
        }
      }

      .textContainer {
        flex: 1;
        display: flex;
        flex-direction: column;
        gap: 30px;

        @include mobile {
          gap: 0px;
          transform: none !important;
          padding: 10px;
          align-items: center;
          text-align: center;
        }

        h2 {
          font-size: 50px;
          color: #FF8E00;

          @include mobile {
            font-size: 36px;
          }
        }

        
        ul {
          color: gray;
          font-size: 16px;

          @include mobile {
            font-size: 16px;
            text-align: left;
            margin-left: 5%;
          }
        }
        .button-container{
          display: flex; flex-direction: row; justify-content: space-between;          
          padding: 4%;
          gap: 30px;

          .source-code-button-container{
            display: flex; align-items: center; justify-content: space-around;
            cursor: pointer;
            border: 2px solid #011f4b; border-radius: 10px;
            height: 50px; 
            width: 50%;
            
            @include mobile{
              width: auto;
              padding: 1px;
            }
          }
          .source-code-button-container:hover{
            transition-delay: 0.1s;
            background-color: #011f4b;
            color: white;
          }
        }



      }
    }
  }
}

